--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -44,10 +44,11 @@
     <Compile Include="FantasyBiotech\Comps\CompResourceTrader_Steam.cs" />
     <Compile Include="FantasyBiotech\Comps\CompPowerPlantNeedResource_Steam.cs" />
     <Compile Include="FantasyBiotech\Comps\CompResourceStorage_SteamTank.cs" />
+    <Compile Include="FantasyBiotech\Defs\ConstructExtension.cs" />
     <Compile Include="FantasyBiotech\Harmony\Alert_GenebankUnpowered_Patch.cs" />
     <Compile Include="FantasyBiotech\Harmony\Building_GeneAssembler_PowerOn.cs" />
     <Compile Include="FantasyBiotech\Harmony\Building_GeneAssembler_Tick_Patch.cs" />
-    <Compile Include="FantasyBiotech\Harmony\Building_MechCharger_CanPawnChargeCurrently - Copy.cs" />
+    <Compile Include="FantasyBiotech\Harmony\Building_MechCharger_GetGizmos.cs" />
     <Compile Include="FantasyBiotech\Harmony\CompGenepackContainer_PostDeSpawn.cs" />
     <Compile Include="FantasyBiotech\Harmony\CompGenepackContainer_PostDestroy.cs" />
     <Compile Include="FantasyBiotech\Harmony\CompGenepackContainer_PowerOn.cs" />
@@ -57,12 +58,16 @@
     <Compile Include="FantasyBiotech\Harmony\JobGiver_GetEnergy_Charger_GetClosestCharger.cs" />
     <Compile Include="FantasyBiotech\Harmony\HarmonyPatches.cs" />
     <Compile Include="FantasyBiotech\MapComponent\RechargerMapComponent.cs" />
+    <Compile Include="FantasyBiotech\Projectiles\Projectile_Bouncing.cs" />
+    <Compile Include="FantasyBiotech\SymbolResolvers\SymbolResolver_RandomConstructGroup.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_SteamGenerator.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_MechCharger_Steam.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_ConstructGestator.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_DynamoCore.cs" />
     <Compile Include="FantasyBiotech\Utility\DictionaryUtility.cs" />
+    <Compile Include="FantasyBiotech\Utility\RadialUtility.cs" />
     <Compile Include="FantasyBiotech\Utility\MechUtility.cs" />
+    <Compile Include="FantasyBiotech\Verbs\Verb_ConstructFlame.cs" />
     <Compile Include="FantasyBiotech\WorkGivers\WorkGiver_DoGestate_Construct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
