--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="FantasyBiotech\Alert_GeneRackUnfueled.cs" />
     <Compile Include="FantasyBiotech\ComplexThreats\FileName.cs" />
+    <Compile Include="FantasyBiotech\Comps\CompColossusRayExplosion.cs" />
+    <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_ColossusRayExplosion.cs" />
     <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_SteamTank.cs" />
     <Compile Include="FantasyBiotech\Comps\CompResourceTrader_Steam.cs" />
     <Compile Include="FantasyBiotech\Comps\CompPowerPlantNeedResource_Steam.cs" />
@@ -73,6 +75,7 @@
     <Compile Include="FantasyBiotech\Harmony\HarmonyPatches.cs" />
     <Compile Include="FantasyBiotech\MapComponent\RechargerMapComponent.cs" />
     <Compile Include="FantasyBiotech\Projectiles\Projectile_Bouncing.cs" />
+    <Compile Include="FantasyBiotech\Projectile_ColossusCannon.cs" />
     <Compile Include="FantasyBiotech\SymbolResolvers\SymbolResolver_RandomConstructGroup.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_SteamGenerator.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_MechCharger_Steam.cs" />
@@ -82,6 +85,7 @@
     <Compile Include="FantasyBiotech\Utility\GenericUtility.cs" />
     <Compile Include="FantasyBiotech\Utility\RadialUtility.cs" />
     <Compile Include="FantasyBiotech\Utility\MechUtility.cs" />
+    <Compile Include="FantasyBiotech\Verbs\Verb_ColossusRay.cs" />
     <Compile Include="FantasyBiotech\Verbs\Verb_ConstructFlame.cs" />
     <Compile Include="FantasyBiotech\WorkGivers\WorkGiver_DoGestate_Construct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
