--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -68,6 +68,7 @@
     <Compile Include="FantasyBiotech\Harmony\MechClusterUtility_SpawnCluster.cs" />
     <Compile Include="FantasyBiotech\Harmony\MechClusterGenerator_GenerateClusterSketch.cs" />
     <Compile Include="FantasyBiotech\Harmony\QuestNode_SpawnMechCluster_TestRunInt.cs" />
+    <Compile Include="FantasyBiotech\Harmony\MechanitorUtility_CanControlMech.cs" />
     <Compile Include="FantasyBiotech\Harmony\SymbolResolver_SleepingMechanoids_Transpilers.cs" />
     <Compile Include="FantasyBiotech\Harmony\GenStep_SleepingMechanoids_Transpiler.cs" />
     <Compile Include="FantasyBiotech\Harmony\SitePartWorker_SleepingMechanoids_GetMechanoidsCount.cs" />
