--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -45,6 +45,9 @@
     <Compile Include="FantasyBiotech\Defs\BossGroupExtension.cs" />
     <Compile Include="FantasyBiotech\Harmony\CallBossgroupUtility_BossgroupEverCallable.cs" />
     <Compile Include="FantasyBiotech\Harmony\WorldFactionsUIUtility_DoWindowContents.cs" />
+    <Compile Include="FantasyBiotech\Jobs\JobDriver_OperateOnPawn.cs" />
+    <Compile Include="FantasyBiotech\ModOption\FantasyBiotechMod.cs" />
+    <Compile Include="FantasyBiotech\ModOption\FantasyBiotechSettings.cs" />
     <Compile Include="FantasyBiotech\QuestNode_Root_Bossgroup_Construct.cs" />
     <Compile Include="FantasyBiotech\Alert_GeneRackUnfueled.cs" />
     <Compile Include="FantasyBiotech\ComplexThreats\FileName.cs" />
@@ -85,6 +88,7 @@
     <Compile Include="FantasyBiotech\Projectiles\Projectile_Bouncing.cs" />
     <Compile Include="FantasyBiotech\SymbolResolvers\SymbolResolver_RandomConstructGroup.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_CommsConsole_Steam.cs" />
+    <Compile Include="FantasyBiotech\ThingClasses\Building_GeneRemover.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_SteamGenerator.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_MechCharger_Steam.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_ConstructGestator.cs" />
@@ -96,6 +100,7 @@
     <Compile Include="FantasyBiotech\Verbs\Verb_ColossusRay.cs" />
     <Compile Include="FantasyBiotech\Verbs\Verb_ConstructFlame.cs" />
     <Compile Include="FantasyBiotech\WorkGivers\WorkGiver_DoGestate_Construct.cs" />
+    <Compile Include="FantasyBiotech\WorkGivers\WorkGiver_ExtractGeneOnPawn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -109,10 +114,10 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.6.4503-beta</Version>
+      <Version>1.6.4566</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
-      <Version>2.3.6</Version>
+      <Version>2.4.1</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
   </ItemGroup>
