--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="FantasyBiotech\Comps\CompTempControl_Steam.cs" />
     <Compile Include="FantasyBiotech\Defs\BossGroupExtension.cs" />
+    <Compile Include="FantasyBiotech\Dialogs\Dialog_CreateGenepack.cs" />
     <Compile Include="FantasyBiotech\Harmony\CallBossgroupUtility_BossgroupEverCallable.cs" />
     <Compile Include="FantasyBiotech\Harmony\MechanitorUtility_ShouldBeMechanitor.cs" />
     <Compile Include="FantasyBiotech\Harmony\WorldFactionsUIUtility_DoWindowContents.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="FantasyBiotech\Projectiles\Projectile_Bouncing.cs" />
     <Compile Include="FantasyBiotech\SymbolResolvers\SymbolResolver_RandomConstructGroup.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_CommsConsole_Steam.cs" />
+    <Compile Include="FantasyBiotech\ThingClasses\Building_GeneMaker.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_GeneRemover.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_SteamGenerator.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_MechCharger_Steam.cs" />
