--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -91,6 +91,8 @@
     <Compile Include="FantasyBiotech\Harmony\JobGiver_GetEnergy_Charger_GetClosestCharger.cs" />
     <Compile Include="FantasyBiotech\MapComponent\RechargerMapComponent.cs" />
     <Compile Include="FantasyBiotech\Projectiles\Projectile_Bouncing.cs" />
+    <Compile Include="FantasyBiotech\StorytellerComps\CompProperties\StorytellerCompProperties_SingleOnceFixed.cs" />
+    <Compile Include="FantasyBiotech\StorytellerComps\StorytellerComp_SingleOnceFixed.cs" />
     <Compile Include="FantasyBiotech\SymbolResolvers\SymbolResolver_RandomConstructGroup.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_CommsConsole_Steam.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_GeneMaker.cs" />
