More Artificer Complex Work

--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -66,14 +66,16 @@
     <Compile Include="FantasyBiotech\ModOption\MenuController.cs" />
     <Compile Include="FantasyBiotech\ModOption\MenuSettings.cs" />
     <Compile Include="FantasyBiotech\ModOption\PatchOperation_ToggleSettings.cs" />
+    <Compile Include="FantasyBiotech\QuestNodes\LayoutWorker\LayoutWorkerComplex_Artificer.cs" />
+    <Compile Include="FantasyBiotech\QuestNodes\QuestNode_AncientComplexArtificer.cs" />
     <Compile Include="FantasyBiotech\QuestNodes\QuestNode_RaidTest.cs" />
+    <Compile Include="FantasyBiotech\QuestNodes\QuestNode_Root_Bossgroup_Construct.cs" />
     <Compile Include="FantasyBiotech\QuestNodes\QuestNode_Sanguophage.cs" />
     <Compile Include="FantasyBiotech\QuestNodes\QuestNode_SpawnConstructCluster.cs" />
     <Compile Include="FantasyBiotech\QuestNodes\QuestNode_StartingMechWalkIn.cs" />
     <Compile Include="FantasyBiotech\QuestNodes\QuestParts\QuestPart_ConstructCluster.cs" />
-    <Compile Include="FantasyBiotech\QuestNode_Root_Bossgroup_Construct.cs" />
     <Compile Include="FantasyBiotech\Alert_GeneRackUnfueled.cs" />
-    <Compile Include="FantasyBiotech\ComplexThreats\FileName.cs" />
+    <Compile Include="FantasyBiotech\ComplexThreats\ComplexThreatWorker_BarrelBomb.cs" />
     <Compile Include="FantasyBiotech\Comps\CompUseEffect_CallBossgroup_Steam.cs" />
     <Compile Include="FantasyBiotech\Comps\CompColossusRayExplosion.cs" />
     <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_ColossusRayExplosion.cs" />
