--- a/Source/FantasyBiotech.csproj
+++ b/Source/FantasyBiotech.csproj
@@ -41,7 +41,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FantasyBiotech\ComplexThreats\ComplexThreatWorker_AncientTerminal.cs" />
     <Compile Include="FantasyBiotech\ComplexThreats\ComplexThreatWorker_ConstructAmbush.cs" />
+    <Compile Include="FantasyBiotech\ComplexThreats\ComplexThreatWorker_SleepingConstructs.cs" />
     <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_AbilitySteamBurst.cs" />
     <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_SteamSpray.cs" />
     <Compile Include="FantasyBiotech\Comps\CompSteamSpray.cs" />
@@ -112,6 +114,8 @@
     <Compile Include="FantasyBiotech\MapComponent\RechargerMapComponent.cs" />
     <Compile Include="FantasyBiotech\Projectiles\Projectile_Bouncing.cs" />
     <Compile Include="FantasyBiotech\StorytellerComps\CompProperties\StorytellerCompProperties_SingleOnceFixed.cs" />
+    <Compile Include="FantasyBiotech\StorytellerComps\CompProperties\StorytellerCompPropertie_ArtificerComplexQuest.cs" />
+    <Compile Include="FantasyBiotech\StorytellerComps\StorytellerComp_ArtificerComplexQuest.cs" />
     <Compile Include="FantasyBiotech\StorytellerComps\StorytellerComp_SingleOnceFixed.cs" />
     <Compile Include="FantasyBiotech\SymbolResolvers\SymbolResolver_RandomConstructGroup.cs" />
     <Compile Include="FantasyBiotech\ThingClasses\Building_CommsConsole_Steam.cs" />
