More Complex Work

--- a/Source/Code/FantasyBiotech.csproj
+++ b/Source/Code/FantasyBiotech.csproj
@@ -50,8 +50,11 @@
     <Compile Include="FantasyBiotech\Comps\Comp_AbilitySteamBurst.cs" />
     <Compile Include="FantasyBiotech\Defs\BossGroupExtension.cs" />
     <Compile Include="FantasyBiotech\Defs\FantasyBiotechThingDefOf.cs" />
+    <Compile Include="FantasyBiotech\Defs\RoomContentExtension.cs" />
     <Compile Include="FantasyBiotech\Dialogs\Dialog_CreateGenepack.cs" />
+    <Compile Include="FantasyBiotech\FloatMenuProvider\FloatMenuOptionProvider_RemoveImplant.cs" />
     <Compile Include="FantasyBiotech\GenSteps\GenStep_CosntructCluster.cs" />
+    <Compile Include="FantasyBiotech\GenSteps\RoomContents_ComplexCorridor.cs" />
     <Compile Include="FantasyBiotech\GenSteps\SketchResolver\SketchResolver_ConstructCluster.cs" />
     <Compile Include="FantasyBiotech\Harmony\CallBossgroupUtility_BossgroupEverCallable.cs" />
     <Compile Include="FantasyBiotech\Harmony\CompOverseer_TryMakeFeral.cs" />
@@ -66,6 +69,7 @@
     <Compile Include="FantasyBiotech\HediffDefs\Hediff_ConstructLink.cs" />
     <Compile Include="FantasyBiotech\IncidentWorkers\IncidentWorker_ConstructCluster.cs" />
     <Compile Include="FantasyBiotech\Jobs\JobDriver_OperateOnPawn.cs" />
+    <Compile Include="FantasyBiotech\Jobs\JobDriver_RemoveImplant.cs" />
     <Compile Include="FantasyBiotech\ModOption\MenuController.cs" />
     <Compile Include="FantasyBiotech\ModOption\MenuSettings.cs" />
     <Compile Include="FantasyBiotech\ModOption\PatchOperation_ToggleSettings.cs" />
