--- a/Source/Code/FantasyBiotech.csproj
+++ b/Source/Code/FantasyBiotech.csproj
@@ -45,6 +45,7 @@
     <Compile Include="FantasyBiotech\ComplexThreats\ComplexThreatWorker_SleepingConstructs.cs" />
     <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_AbilitySteamBurst.cs" />
     <Compile Include="FantasyBiotech\Comps\CompProperties\CompProperties_SteamSpray.cs" />
+    <Compile Include="FantasyBiotech\Comps\CompResource_Steam.cs" />
     <Compile Include="FantasyBiotech\Comps\CompSteamSpray.cs" />
     <Compile Include="FantasyBiotech\Comps\CompTempControl_Steam.cs" />
     <Compile Include="FantasyBiotech\Comps\Comp_AbilitySteamBurst.cs" />
